@@ -12,3 +12,4 @@
 - fixed the display name of ALPHA_ELECTRICITY_STORAGE (2021.1.29-17:52)
 - fixed a repeated recipe in BIOMASS_EXTRACTION_MACHINE (2021.1.30-13:06)
 - add MAGNESIUM_GENERATOR and MAGNESIUM_SALT (2021.1.31-21:32)
+- add QUANTUM_SOLAR_GENERATOR (2021.2.1-17:47)
